hphp/test/zend/good/tests/lang/operators/bitwiseShiftRight_variationStr.php.skipif
<?php
<<__EntryPoint>> function main() {
if ((65<<65)==0) die("skip this test is for Intel only");
}
