hphp/test/zend/bad/ext/mysqli/tests/009.php.skipif
<?php
	if (PHP_INT_SIZE == 8) {
		echo 'skip test valid only for 32bit systems';
		exit;
	}
	require_once('skipif.inc');
	require_once('skipifconnectfailure.inc');
?>